--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@fabianlars/tauri-plugin-oauth": "^2.0.0",
     "@tauri-apps/api": "^2.7.0",
     "@tauri-apps/plugin-opener": "^2.4.0",
     "next": "^15.4.2",
@@ -25,7 +26,7 @@
     "@eslint/js": "^9.31.0",
     "@next/eslint-plugin-next": "^15.4.2",
     "@tailwindcss/postcss": "^4.1.11",
-    "@tauri-apps/cli": "^2.7.0",
+    "@tauri-apps/cli": "^2.7.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^24.0.15",
