--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tauri-nextjs-template"
 version = "0.1.0"
 description = "A Tauri App"
-authors = ["you"]
+authors = ["Moore"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -23,6 +23,18 @@ serde = { version = "1", features = ["derive"] }
 tauri = { version = "2", features = ["devtools"] }
 tauri-plugin-opener = "2"
 tauri-plugin-oauth = "2"
+tauri-plugin-shell = "2"
+
+rand = "0.8"
+sha2 = "0.10"
+base64 = "0.22"
+url = "2"
+reqwest = {version = "0.12", features = ["json"] }
+keyring = "2"
+dotenvy = "0.15"
+once_cell = "1.19"
+
+tokio = {version = "1", features = ["rt-multi-thread", "macros"] }
 
 [features]
 # by default Tauri runs in production mode
